<resources>
    <string name="app_name">QuanLyThoiGian</string>
    //activity_add
    <string name="them_mon_hoc">THÊM MÔN HỌC</string>
    <string name="mon">Môn</string>
    <string name="phong">Phòng</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="ket_thuc">Kết Thúc</string>
    <string name="giang_vien">Giảng viên</string>
    <string name="email">Email</string>
    <string name="sdt">SDT</string>
    <string name="huy">Hủy</string>
    <string name="luu">Lưu</string>
    <string name="chi_tiet">CHI TIẾT</string>
    <string name="chinh_sua">Chỉnh sửa</string>


    <string name="thoi_gian_dong_listview">Thời gian:</string>
    <string name="phong_dong_listview">Phòng:</string>

    //activity_detail_tgb
    <string name="cong_viec">CÔNG VIỆC</string>
    <string name="su_kien">Sự kiện</string>
    <string name="tro_lai">Trở lại</string>
    <string name="xoa">Xóa</string>
    <string name="chinh_sua_them">Chỉnh sửa / Thêm</string>

    //activity_main
    <string name="thoi_khoa_bieu">THỜI KHÓA BIỂU</string>
    <string name="thoi_gian_bieu">THỜI GIAN BIỂU</string>


    <string name="ngay">Ngày</string>
    <string name="tuan">Tuần</string>

    <string name="nhan_vao_day">Nhấn vào đây</string>

    <string name="mon_hoc">Môn học</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="chup_anh">Chụp ảnh</string>


    <string name="tieu_de">Tiêu đề</string>
    <string name="noi_dung">Nội dung</string>
    <string name="gui_email">Gửi Email</string>

    <string name="thu_2">THỨ HAI</string>
    <string name="thu_3">THỨ BA</string>
    <string name="thu_4">THỨ TƯ</string>
    <string name="thu_5">THỨ NĂM</string>
    <string name="thu_6">THỨ SÁU</string>
    <string name="thu_7">THỨ BẢY</string>
    <string name="chu_nhat">CHỦ NHẬT</string>

    <string name="nhap_ghi_chu">Nhập ghi chú ...</string>

    <string name="luu_ma_khong_co_ten_mon_hoc">Lưu mà không có tên môn học?</string>
    <string name="khong_co_du_lieu_de_xoa">Không có dữ liệu để xóa!</string>
    <string name="ung_dung_chua_duoc_cap_quyen_de_goi_dien_thoai">Ứng dụng chưa được cấp quyền để gọi điện thoại!</string>
    <string name="ung_dung_chua_duoc_cap_quyen_de_gui_tin_nhan">Ứng dụng chưa đươc cấp quyền gửi tin nhắn!</string>
    <string name="khong_ho_tro_email">Không có ứng dụng hỗ trợ email được cài đặt!</string>
    <string name="ban_khong_duoc_mo_camera">Bạn không được mở máy ảnh!</string>
    <string name="ban_co_chac_muon_xoa">Bạn có chắc chắn muốn xóa?</string>
    <string name="da_xoa">Đã xóa !</string>
    <string name="loi_cap_nhat_du_lieu">Xin lỗi bạn! Đã xảy ra lỗi cập nhật dữ liệu.</string>
    <string name="da_them_mon_hoc_moi">Đã thêm môn học mới!</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công!</string>
    <string name="da_luu_ghi_chu">Đã lưu ghi chú!</string>
    <string name="da_luu_anh">Đã lưu ảnh!</string>
    <string name="danh_gia_app">Đánh giá!</string>
    <string name="ban_co_thich_ung_dung_khong">Bạn có thích ứng dụng này không?</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="de_sau">Để sau</string>

    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="t5">T5</string>
    <string name="t6">T6</string>
    <string name="t7">T7</string>
    <string name="cn">CN</string>

    <string name="ngon_ngu">Ngôn ngữ</string>
    <string name="chon_mau">Chọn màu:</string>


    <string name="deleted">Đã xóa ảnh</string>
    <string name="share_using">Chia sẻ đến</string>

    <string name="canot_open_camera">Không mở được Camera!</string>

    <string name="not_take">Bạn chưa chụp ảnh</string>
    <string name="nhac_nho">Nhắc nhở: </string>

</resources>
