<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#1e7bc9"
            android:gravity="center"
            android:text="@string/them_mon_hoc"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="40dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:textSize="20sp"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textColor="@color/app_blue"
                android:drawableLeft="@drawable/mon_hoc" />

            <EditText
                android:id="@+id/edtTenMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phong"
                android:textSize="20sp"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/app_blue"
                android:drawableLeft="@drawable/phong"/>

            <EditText
                android:id="@+id/edtPhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian"
                android:textSize="20sp"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/app_blue"
                android:drawableLeft="@drawable/thoigian"/>

            <LinearLayout>
                <TextView
                    android:id="@+id/tvTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/bat_dau"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#999999"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="       -      "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/ket_thuc"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#999999"
                    />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giang_vien"
                android:textSize="20sp"
                android:gravity="center|left"
                android:drawableLeft="@drawable/giang_vien"
                android:textStyle="bold"
                android:textColor="@color/app_blue"/>

            <EditText
                android:id="@+id/edtGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:gravity="center|left"
                android:textColor="@color/app_blue"
                android:drawableLeft="@drawable/email"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdt"
                android:textSize="20sp"
                android:gravity="center|left"
                android:textColor="@color/app_blue"
                android:drawableLeft="@drawable/sdt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10" />
        </TableRow>
        </TableLayout>
    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginBottom="@dimen/edt_margin_bottom">

            <Button
                android:id="@+id/btnSave"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_btn_luu"
                android:text="@string/luu"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_btn_xoa"
                android:text="@string/huy"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>


</RelativeLayout>