<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#1e7bc9"
            android:gravity="center"
            android:text="CHỈNH SỬA"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_title" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/mon_hoc"
                android:gravity="center|start"
                android:text="@string/mon"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtTenMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phong"
                android:gravity="center|left"
                android:text="@string/phong"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtPhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/thoigian"
                android:gravity="center|left"
                android:text="@string/thoi_gian"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <LinearLayout>

                <TextView
                    android:id="@+id/tvTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:gravity="center"
                    android:hint="@string/bat_dau"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - " />

                <TextView
                    android:id="@+id/tvTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/ket_thuc"
                    android:textSize="20sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/giang_vien"
                android:gravity="center|left"
                android:text="@string/giang_vien"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email"
                android:gravity="center|left"
                android:text="@string/email"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edt_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/sdt"
                android:gravity="center|left"
                android:text="@string/sdt"
                android:textStyle="bold"
                android:textColor="@color/phuc_blue"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginBottom="@dimen/edt_margin_bottom">

        <Button
            android:id="@+id/btnSave"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_btn_luu"
            android:text="@string/luu"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_btn_xoa_activity_add"
            android:text="@string/huy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>


