<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:id="@+id/lnItem"
        android:orientation="vertical"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:background="@drawable/vientron"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvMonHoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/mon_hoc"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/book"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian_dong_listview"
                android:textSize="17sp"
                android:drawableLeft="@drawable/time"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvPhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phong_dong_listview"
                android:textSize="17sp"
                android:drawableLeft="@drawable/home"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>