<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gameloft.pc.quanlythoigian.utils.EditTgbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/cong_viec"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/app_blue"
            android:textSize="40sp"/>
        <EditText
            android:id="@+id/edt_cv"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginTop="@dimen/tgb_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/su_kien"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hight_button"
                android:textSize="20sp"
                android:text="@string/ket_thuc"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text=":" />
            <Space
                android:layout_width="@dimen/activity_main_icon_button_space"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_time_end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hight_button"
                android:hint="@string/nhan_vao_day"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chon_mau"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="@dimen/activity_main_icon_group_pađing_bottom"
            />
        <RadioGroup
            android:id="@+id/radiogroup_mau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/mau_xanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ridio_xanh"
                />

            <RadioButton
                android:id="@+id/mau_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ridio_do"/>

            <RadioButton
                android:id="@+id/mau_xanh_la_cay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ridio_xanh_la"/>

            <RadioButton
                android:id="@+id/mau_tim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ridio_tim"/>
            <RadioButton
                android:id="@+id/mau_vang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ridio_vang"/>
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/edt_margin_top">

        <Button
            android:id="@+id/btn_luu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_btn_luu"
            android:text="Lưu"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/edt_margin_right"/>

        <Button
            android:id="@+id/btn_huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_btn_xoa"
            android:text="Hủy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/edt_margin_left"/>
    </RelativeLayout>


</RelativeLayout>
